src/objects/ACETLetterVisiblebyCalltopicandProfile__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines the Letters visibility in Create letter page as per the Call topic and Profile</description>
    <fields>
        <fullName>Employee_Broker_Letters_Visible__c</fullName>
        <label>Employee/Broker Letters Visible</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Broker_Profiles__c</fullName>
        <label>Employee/Broker Profiles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Letters_Visible__c</fullName>
        <label>Member Letters Visible</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Profiles__c</fullName>
        <label>Member Profiles</label>
        <type>TextArea</type>
    </fields>
    <label>ACETLetterVisiblebyCalltopicandProfile</label>
</CustomObject>